# automatic-timer

./: Cargo.toml  README.md  sdkconfig.defaults
src/: main.rs
