[package]
name = "automatic-timer"
version = "0.1.0"
authors = ["Benjamin Stürmer <webmaster@stuermer-benjamin.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"
description = "Simple embedded application to switch an GPIO on/off based on an internal timer while running. The timeouts can be changed via an internal webserver/"

[[bin]]
name = "automatic-timer"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
default-features = false # disable proc-macros

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
default-features = false # disable proc-macros

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = "1.0"
log = { version = "0.4", default-features = false }
esp-idf-sys = "0.34.1"
esp-idf-hal = "0.43.1"
esp-idf-svc = { version = "0.48", features = ["experimental"] }
embedded-svc = "0.27.1"
embedded-hal = "1.0.0"

[build-dependencies]
embuild = "0.31.3"


